src/test/deca/syntax/invalid/cast/missing_closing_parenthesis_11.deca
// Description:
//    Tests a syntactically incorrect program for a cast expression missing a closing parenthesis
//
// Results:
//    Line 11 : Error, expected ')'.
//
// History:
//    created on 07/01/2025

{
    int a = (int 10;
}